--- a/NFe.Danfe.Base/NFe.Danfe.Base.csproj
+++ b/NFe.Danfe.Base/NFe.Danfe.Base.csproj
@@ -4,8 +4,7 @@
 	  <TargetFrameworks>net462;netstandard2.0;net6.0</TargetFrameworks>
 	  
   </PropertyGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'net48' or '$(TargetFramework)' == 'net6.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'net48' or '$(TargetFramework)' == 'net6.0' and '$(OS)' == 'Windows_NT'">
     <PackageReference Include="System.Drawing.Common">
       <Version>6.0.0</Version>
     </PackageReference>
