--- a/NFe.Utils/NFe.Utils.csproj
+++ b/NFe.Utils/NFe.Utils.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net462;netstandard2.0;net6.0</TargetFrameworks>
-	  
+    <TargetFrameworks>net462;netstandard2.0;net6.0;net7.0</TargetFrameworks>
+
   </PropertyGroup>
-	
+
   <ItemGroup>
     <ProjectReference Include="..\DFe.Utils\DFe.Utils.csproj" />
     <ProjectReference Include="..\NFe.Classes\NFe.Classes.csproj" />
