--- a/DFe.Utils/DFe.Utils.csproj
+++ b/DFe.Utils/DFe.Utils.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net462;netstandard2.0;net6.0</TargetFrameworks>
-		
+		<TargetFrameworks>net462;netstandard2.0;net6.0;net7.0</TargetFrameworks>
+
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" />
+		<PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
